--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 html,
 body {
   position: relative;
@@ -19,10 +24,60 @@ body {
 }
 
 .swiper-slide {
-  text-align: center;
   font-size: 18px;
   background: #fff;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  align-items: end;
+
+  position: relative;
+}
+.swiper-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+
+  position: absolute;
+  z-index: 0;
+}
+
+.swiper-slide .content {
+  position: absolute;
+  z-index: 0;
+
+  color: white;
+
+  margin-left: 12.5rem;
+  margin-bottom: 10rem;
+}
+
+.swiper-slide .content .title {
+  font-size: 2rem;
+  max-width: 33.75rem;
+}
+.swiper-slide .content .subtitle {
+  font-size: 1.25rem;
+  margin-top: .5rem;
+
+}
+
+.swiper-slide .content .text {
+  max-width: 40.75rem;
+  margin-top: 1rem;
+}
+
+.custom-next-button {
+  width: 26.75rem;
+  border: none;
+  padding: 1rem 0;
+  border-radius: 24rem;
+  background-color: #436667;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 2rem;
+
+}
+
+.custom-next-button:hover {
+  background-color: #4c7c7d;
 }
