--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+/* 
+  We are using a "Mobile First" approach in this design.
+  "Mobile First" means that we prioritize designing for smaller screens, like smartphones,
+  before scaling up to larger screens such as tablets and desktops.
+  This approach is essential as mobile devices are often the primary way users access content.
+  Starting with mobile ensures that the design is streamlined, responsive, and efficient on all devices.
+  It helps us create a strong foundation for usability, adding enhancements for larger screens as needed.
+*/
+
 * {
   padding: 0;
   margin: 0;
@@ -10,17 +19,20 @@ body {
 }
 
 body {
-  background: #eee;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
 }
 
 .swiper {
   width: 100%;
   height: 100%;
+}
+.swiper-pagination-progressbar {
+  background: #233636 !important;
+}
+
+.swiper-pagination-progressbar-fill {
+  background: #436667 !important;
 }
 
 .swiper-slide {
@@ -46,27 +58,27 @@ body {
 
   color: white;
 
-  margin-left: 12.5rem;
-  margin-bottom: 10rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 2rem;
 }
 
 .swiper-slide .content .title {
   font-size: 2rem;
-  max-width: 33.75rem;
+  max-width: 100%;
 }
 .swiper-slide .content .subtitle {
   font-size: 1.25rem;
-  margin-top: .5rem;
-
+  margin-top: 0.5rem;
 }
 
 .swiper-slide .content .text {
-  max-width: 40.75rem;
+  max-width: 100%;
   margin-top: 1rem;
 }
 
 .custom-next-button {
-  width: 26.75rem;
+  width: 100%;
   border: none;
   padding: 1rem 0;
   border-radius: 24rem;
@@ -75,9 +87,61 @@ body {
   font-weight: bold;
   cursor: pointer;
   margin-top: 2rem;
-
 }
 
 .custom-next-button:hover {
   background-color: #4c7c7d;
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .swiper-slide .content {
+    margin-left: 3rem;
+    margin-bottom: 4rem;
+  }
+
+  .swiper-slide .content .title {
+    max-width: 33.75rem;
+  }
+  .swiper-slide .content .subtitle {
+    margin-top: 0.5rem;
+  }
+
+  .swiper-slide .content .text {
+    max-width: 40.75rem;
+  }
+
+  .custom-next-button {
+    width: 26.75rem;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .swiper-slide .content {
+    margin-left: 12.5rem;
+    margin-bottom: 5rem;
+  }
+
+  .swiper-slide .content .title {
+    max-width: 33.75rem;
+  }
+  .swiper-slide .content .subtitle {
+    margin-top: 0.5rem;
+  }
+
+  .swiper-slide .content .text {
+    max-width: 40.75rem;
+  }
+
+  .custom-next-button {
+    width: 26.75rem;
+  }
+}
+
+/* Extra extra large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {
+  .swiper-slide .content {
+    margin-bottom: 10rem;
+  }
 }
