--- a/style.css
+++ b/style.css
@@ -52,6 +52,20 @@ body {
   z-index: 0;
 }
 
+  .swiper-slide:last-of-type::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent); 
+    
+
+    z-index: 1; /* Ensure this is above the image */
+}
+
+
 .swiper-slide .content {
   position: absolute;
   z-index: 0;
@@ -61,7 +75,9 @@ body {
   margin-left: 1rem;
   margin-right: 1rem;
   margin-bottom: 2rem;
+  z-index: 2;
 }
+
 
 .swiper-slide .content .title {
   font-size: 2rem;
@@ -74,7 +90,8 @@ body {
 
 .swiper-slide .content .text {
   max-width: 100%;
-  margin-top: 1rem;
+  margin-top: .5rem;
+  font-size: .95rem;
 }
 
 .custom-next-button {
